Stylesheet/emote/tag updates 2012-11-23

--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -23,13 +23,14 @@ a[href|="/wmbrass"] {width:170px; height:226px; background-position: -154px -793
 a[href|="/brassdance"]
 {
  
- background-image: url(%%brassdance%%) !important;
+ background-image: url(%%brassdance%%);
     clear: none;
     display: block;
     float: left;
     width: 92px;
-    height: 114px;
+    height: 114px
 }
+
 a[href|="/couchflip"]
 {
  
