--- a/source-css/mylittleserver.css
+++ b/source-css/mylittleserver.css
@@ -210,6 +210,14 @@ a[href|="/mlse2"], a[href|="/mybrand"] {
     height: 230px;
     background-image: url(%%mybrand%%)
     }
+a[href|="/mlse3"], a[href|="/onedoesnotsimply"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 220px;
+    height: 198px;
+    background-image: url(%%onedoesnotsimply%%)
+    }
 END-PONYSCRIPT-IGNORE{color:red;}
 
 /*Changing Names*/
