--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -298,7 +298,7 @@ a[href|="/butttacos"] {
     float: left;
     width: 400px;
     height: 225px;
-    background-image: url(%%butttacos%%) !important
+    background-image: url(%%butttacos%%)
     }
 
 
@@ -356,7 +356,7 @@ a[href|="/rufflenibbles"], a[href|="/taconibbles"] {
     float: left;
     width: 500px;
     height: 419px;
-    background-image: url(%%taconibbles%%) !important
+    background-image: url(%%taconibbles%%) 
     }
 a[href|="/tacobop"] {
     background-position: 0px 0px;
@@ -365,7 +365,7 @@ a[href|="/tacobop"] {
     float: left;
     width: 399px;
     height: 399px;
-    background-image: url(%%tacobop%%) !important
+    background-image: url(%%tacobop%%)
     }
 a[href|="/tacosmug"] {
     background-position: 0px 0px;
