--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1,3 +1,5 @@
+/* Removed !important from all the emotes. Unnecessary and breaks things. -derram */ 
+
 /*CSS pre-derram fuckery: http://pastebin.com/dgDEPi34 | https://dl.dropbox.com/u/1277953/foodmanes.zip */
 
 /* LETS ORGANIZE THIS SHIT, I LIKE SHIT ORGANIZED
@@ -64,7 +66,7 @@ z-index: -100
 /* Emotes */
 a[href|="/lcheese"], a[href|="/rmallow"]
 {
-    background-image: url(%%Emote1%%) !important;
+    background-image: url(%%Emote1%%);
     clear: none;
     display: block;
     float: left;
@@ -602,7 +604,7 @@ body.res-nightmode:first-of-type {
 a[href|="/pepperminttwist"]
 {
 
- background-image: url(%%pepperminttwist%%) !important;
+ background-image: url(%%pepperminttwist%%);
     clear: none;
     display: block;
     float: left;
@@ -613,7 +615,7 @@ a[href|="/pepperminttwist"]
 a[href|="/espeefun"]
 {
 
- background-image: url(%%espy%%) !important;
+ background-image: url(%%espy%%);
     clear: none;
     display: block;
     float: left;
@@ -626,7 +628,7 @@ a[href|="/espeefun"]
 a[href|="/twiststare"]
 {
 
- background-image: url(%%twiststare%%) !important;
+ background-image: url(%%twiststare%%);
     clear: none;
     display: block;
     float: left;
@@ -687,7 +689,7 @@ a[href|="/buttershy"], a[href|="/derpymousse"], a[href|="/disugh"], a[href|="/fl
     float: left;
     width: 150px;
     height: 150px;
-    background-image:url(%%foodsheet%%) !important
+    background-image:url(%%foodsheet%%)
     }
 
 
@@ -749,7 +751,7 @@ a[href|="/twistballs"], a[href|="/mcragepants"] {
     float: left;
     width: 200px;
     height: 205px;
-    background-image:url(%%mcrage%%) !important
+    background-image:url(%%mcrage%%) 
     }
 
 a[href|="/twistballs"] {
@@ -768,17 +770,17 @@ a[href|="/mcragepants"] {
 a[href|="/gak"]
 {
 
- background-image: url(%%gak%%) !important;
+ background-image: url(%%gak%%);
     clear: none;
     display: block;
     float: left;
     height: 200px;
-    width: 187px;
+    width: 187px
 
 }
 a[href|="/applesaurus"],  a[href|="/bro"],  a[href|="/bryvood"],  a[href|="/choctavia"], a[href|="/clamyam"], a[href|="/colgatemunism"], a[href|="/colgatemunist"], a[href|="/conky"], a[href|="/sbtaffy"],   a[href|="/fillytacoshy"],   a[href|="/floutstalin"],   a[href|="/floutsy"],   a[href|="/greatrage"],   a[href|="/greatyamsoffire"],   a[href|="/hitmonmatt"],   a[href|="/lyrasup"],   a[href|="/macinmane"],   a[href|="/mechahitler"],   a[href|="/quillmaster"],   a[href|="/rariberry"],   a[href|="/rdskittles"],   a[href|="/sage"],   a[href|="/sagepuke"],   a[href|="/sexualpleasure"],   a[href|="/suckitave"],   a[href|="/tacoshy"],   a[href|="/themagicalcouch"],   a[href|="/wololo"]{   
 
- background-image: url(%%transparentsheet%%) !important;
+ background-image: url(%%transparentsheet%%);
     clear: none;
     display: block;
     float: left; }
@@ -812,7 +814,7 @@ a[href|="/wololo"] {width:150px; height:150px; background-position: -587px -2px}
 
 a[href|="/ave"],a[href|="/doubledildo"],a[href|="/heresyourbeardemotesageireallyhopeyourehappywithyourself"],a[href|="/jax"],a[href|="/quails"],a[href|="/whatthefacannons"]{
 
- background-image: url(%%backgroundssheet%%) !important;
+ background-image: url(%%backgroundssheet%%);
     clear: none;
     display: block;
     float: left; }
@@ -830,7 +832,7 @@ a[href|="/whatthefacannons"] {width:478px; height:300px; background-position: -2
 a[href|="/rwololo"]
 {
 
- background-image: url(%%rwololo%%) !important;
+ background-image: url(%%rwololo%%) ;
     clear: none;
     display: block;
     float: left;
@@ -842,7 +844,7 @@ a[href|="/rwololo"]
 a[href|="/twicandy"]
 {
 
- background-image: url(%%twicandy%%) !important;
+ background-image: url(%%twicandy%%);
     clear: none;
     display: block;
     float: left;
@@ -854,7 +856,7 @@ a[href|="/twicandy"]
 a[href|="/betty"]
 {
 
- background-image: url(%%betty%%) !important;
+ background-image: url(%%betty%%);
     clear: none;
     display: block;
     float: left;
@@ -866,7 +868,7 @@ a[href|="/betty"]
 a[href|="/sweetiesteak"]
 {
 
- background-image: url(%%sweetiesteak%%) !important;
+ background-image: url(%%sweetiesteak%%);
     clear: none;
     display: block;
     float: left;
@@ -878,7 +880,7 @@ a[href|="/sweetiesteak"]
 a[href|="/spitfirefire"]
 {
 
- background-image: url(%%spitfire%%) !important;
+ background-image: url(%%spitfire%%);
     clear: none;
     display: block;
     float: left;
@@ -890,7 +892,7 @@ a[href|="/spitfirefire"]
 a[href|="/likeoneofus"]
 {
 
- background-image: url(%%likeoneofus%%) !important;
+ background-image: url(%%likeoneofus%%);
     clear: none;
     display: block;
     float: left;
