--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -1306,7 +1306,7 @@ a[href|="/fluttershock"]
 
 
 a[href|="/vinylspin"], a[href|="/scratchspin"] {
-    background-image: url(%%vinylspin%%) !important
+    background-image: url(%%vinylspin%%) 
 }
 
 
@@ -1381,7 +1381,7 @@ a[href|="/badjokemostlikely"], a[href|="/bjml"], a[href|="/bj"], a[href|="/orsch
 }
 
 a[href|="/pheidance"] {
-    background-image: url(%%Pheidance%%) !important;
+    background-image: url(%%Pheidance%%);
     clear: none;
     display: block;
     float: left;
@@ -1389,7 +1389,7 @@ a[href|="/pheidance"] {
     width: 100px
 }
 a[href|="/pheicry"] {
-    background-image: url(%%pheicry%%) !important;
+    background-image: url(%%pheicry%%) ;
     clear: none;
     display: block;
     float: left;
@@ -1416,13 +1416,13 @@ a[href|="/phei"] {
     background-position: 0px 0px !important;
 }
 a[href|="/twirock"],a[href|="/twiheadbang"] {
-background-image: url(%%twirock%%) !important;
+background-image: url(%%twirock%%) ;
     clear: none;
     display: block;
     float: left;
     width: 150px;
     height: 150px;
-    background-position: -0px 0px !important
+    background-position: -0px 0px
 }
 /* Other */
 
