--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -284,69 +284,70 @@ a[href|="/grumpypip"]{ background-position: 0px -2315px; width: 142px; height: 1
 
 a[href|="/advicebj"]
 {
-    width: 300px;
-    height: 300px;
-    cursor: default;
-    display: block;
-    background-repeat: no-repeat;
-    text-align: center;
-    color: white;
-    font-family: Impact, sans-serif;
-    font-size: 26px;
-    line-height: 24px;
-    text-shadow: 2px 2px 2px black, -2px -2px 2px black, -2px 2px 2px black, 2px -2px 2px black;
-    overflow: hidden;
-    position: relative;
-    text-transform: uppercase;
-    background-image: url(%%foe-em3-v22%%);
+    width: 300px !important;
+    height: 300px !important;
+    cursor: default !important;
+    display: block !important;
+    background-repeat: no-repeat !important;
+    text-align: center !important;
+    color: white !important;
+    font-family: Impact, sans-serif !important;
+    font-size: 26px !important;
+    line-height: 24px !important;
+    text-shadow: 2px 2px 2px black, -2px -2px 2px black, -2px 2px 2px black, 2px -2px 2px black !important;
+    overflow: hidden !important;
+    position: relative !important;
+    text-transform: uppercase !important;
+    background-image: url(%%foe-em3-v22%%) !important;
 }
+
 a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
 
 a[href|='/advicebj'] em{
-    font-style: normal;
-    position: absolute;
-    top: 12px;
-    width: 280px;
-    color: white;
-    left: 50%;
-    margin-left: -140px;
+    font-style: normal !important;
+    position: absolute !important;
+    top: 12px !important;
+    width: 280px !important;
+    color: white !important;
+    left: 50% !important;
+    margin-left: -140px !important
     }
 a[href|='/advicebj'] strong{
-    font-weight: normal;
-    position: absolute;
-    bottom: 13px;
-    color: white;
-    width: 280px;
-    left: 50%;
-    margin-left: -140px;
+    font-weight: normal !important;
+    position: absolute !important;
+    bottom: 13px !important;
+    color: white !important;
+    width: 280px !important;
+    left: 50% !important;
+    margin-left: -140px !important
     }
 
 
 
 a[href|="/lpsign"]{
-    background-image: url(%%foe-em3-v22%%);
-    background-repeat: no-repeat;
-    display: inline-block;
-    position: relative;
+    background-image: url(%%foe-em3-v22%%) !important;
+    background-repeat: no-repeat !important;
+    display: inline-block !important;
+    position: relative !important;
     width:166px; height:150px;
-    line-height: 24px;
-    overflow: hidden;
-    cursor: default;
+    line-height: 24px !important;
+    overflow: hidden !important;
+    cursor: default !important;
     }
     
 a[href|="/lpsign"] em{
-    position: absolute;
-    top: 50px;
-    left: 95%;
-    margin-left: -100px;
-    width: 93px;
-    color: #465A73;
-    text-align: center;
-    text-transform: uppercase;
-    text-shadow: -1px 0 #394D66,0 1px #394D66,1px 0 #394D66,0 -1px #394D66;
-    font-family: "Comic Sans";
-    font-style: normal;
-    font-size: 15px;
+    position: absolute !important;
+    top: 50px !important;
+    left: 95% !important;
+    margin-left: -100px !important;
+    width: 93px !important;
+    color: #465A73 !important;
+    text-align: center !important;
+    text-transform: uppercase !important;
+    text-shadow: -1px 0 #394D66,0 1px #394D66,1px 0 #394D66,0 -1px #394D66!important;
+    font-family: "Comic Sans" !important;
+    font-style: normal !important;
+    font-size: 15px !important;
     }    
 a[href|='/lpsign'] {width:262px; height:300px; background-position: 0px -1600px}
 
