--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -1,3 +1,5 @@
+a[href|='/erryday'] { width:255px; height:150px; background-image: url(%%erryday%%);  display: block; clear: none; float: left;}
+
 a[href|='/twiflap'] { width:132px; height:150px; background-image: url(%%twiflap%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px; }
 a[href|='/twitwitch'] { width:122px; height:150px; background-image: url(%%twitwitch%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px; }
 
