--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -889,6 +889,15 @@ a[href|="/seriouslydance"] {
     height: 130px;
     background-image: url(%%woonadance%%)
     }
+a[href|="/seriouslysweetieshake"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 161px;
+    height: 217px;
+    background-image: url(%%shakeit%%)
+    }
+
 
 /*** Mane Six emotes ***/
 
