--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -385,6 +385,15 @@ a[href|="/conkyfun"] {
     height: 159px;
     background-image: url(%%Conkybear%%) !important
     }
+a[href|="/chocotaco"], a[href|="/senoritatacoshy"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 234px;
+    background-image: url(%%chocotaco%%) !important
+    }
 
 /* ----------- Name Change ---------------- */
 
