Stylesheet/emote/tag updates 2012-11-28

--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%);
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v25%%);
+background-image: url(%%foe-em3-v28%%);
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -280,6 +280,7 @@ a[href|="/bjwhiskey"]{ background-position: 0px -1905px; width: 96px; height: 14
 a[href|="/crazyrampage"]{ background-position: 0px -2060px; width: 150px; height: 105px;}
 a[href|="/deus"]{ background-position: 0px -2170px; width: 150px; height: 139px;}
 a[href|="/grumpypip"]{ background-position: 0px -2315px; width: 142px; height: 150px;}
+a[href|="/g3bj"]{ background-position: 0px -2470px; width: 75px; height: 70px;}
 
 
 a[href|="/advicebj"]
