--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -902,3 +902,25 @@ a[href|="/likeoneofus"]
     width: 220px;
 
 }
+a[href|="/youreawesome"]
+{
+
+ background-image: url(%%youreawesome%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 275px;
+    width: 200px;
+
+}
+a[href|="/milkymane"]
+{
+
+ background-image: url(%%milkymane%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 200px;
+    width: 258px;
+
+}
