--- a/source-css/pinkiepie.css
+++ b/source-css/pinkiepie.css
@@ -136,7 +136,7 @@ margin-left: 130px;
     background-position: 0px -70px !important
 }
 /*-------------------- Font! --------------------------------------*/
-a[href|="/pinkiebig!"]{ color: #c10064 !important; font-size: 20px !important; cursor: text !important; background-color: #f8c0ce !important; }
+a[href|="/pinkiebig!"]{ color: #c10064 !important; font-size: 20px !important; background-color: #f8c0ce !important; }
 /* ---------- Hide "Created by..." while keeping "a community for..." in the sidebar ---------- */
 .titlebox .bottom {
     font-size: 0px
