--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -6,7 +6,6 @@
 Rule #1: Do NOT get Fluttershy started on the fauna!
 Rule #2: Do NOT make the CSS herp the derp
 Rule #3: You've GOT to check this CSS out! This CSS is craAAAAaazy!
-Rule #4: Never Interrupt Orschmann's morning meditation. 
 */
 
 /*Changing readers in sidebar*/
@@ -342,7 +341,7 @@ a[href|="/swagintosh"], a[href|="/a24"], a[href|="/rswagintosh"], a[href|="/ra24
 a[href|="/rswagintosh"], a[href|="/ra24"] {
     background-position: -0px -70px !important
     }
-a[href|="/a00"], a[href|="/ajlie"], a[href|="/a01"], a[href|="/a10"], a[href|="/a11"], a[href|="/a21"], a[href|="/priceless"], a[href|="/a20"], a[href|="/flutterjerk"], a[href|="/celestiamad"], a[href|="/twicrazy"], a[href|="/twipride"], a[href|="/lunateehee"], a[href|="/lunawait"], a[href|="/a02"], a[href|="/a12"], a[href|="/a22"], a[href|="/a04"], a[href|="/a14"], a[href|="/a05"], a[href|="/a15"], a[href|="/paperbagderpy"], a[href|="/paperbagwizard"], a[href|="/derpwizard"], a[href|="/a03"], a[href|="/ajhappy"], a[href|="/happlejack"], a[href|="/a13"], a[href|="/ppfear"], a[href|="/pinkiefear"], a[href|="/a23"], a[href|="/twibeam"], a[href|="/raritydaww"], a[href|="/scootacheer"], a[href|="/lootascoo"], a[href|="/ajsup"], a[href|="/ajwhatsgood"], a[href|="/flutterwhoa"], a[href|="/flutterwoah"], a[href|="/a25"], a[href|="/rdcry"], a[href|="/a06"], a[href|="/ohcomeon"], a[href|="/sbcomeon"], a[href|="/ppcute"], a[href|="/cutiepie"], a[href|="/a16"], a[href|="/a26"], a[href|="/abbored"], a[href|="/abmerp"], a[href|="/a07"], a[href|="/raritypaper"], a[href|="/raritynews"], a[href|="/a17"],a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/a27"],a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/a08"],a[href|="/twiright"],a[href|="/satistwied"],a[href|="/a18"],a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/a28"],a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/a09"],a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a19"],a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[href|="/a29"],a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadence"],a[href|="/princesscadance"],a[href|="/princessmiamorecadenza"], a[href|="/a30"], a[href|="/flutterroll"] {
+a[href|="/a00"], a[href|="/ajlie"], a[href|="/a01"], a[href|="/a10"], a[href|="/a11"], a[href|="/a21"], a[href|="/priceless"], a[href|="/a20"], a[href|="/flutterjerk"], a[href|="/celestiamad"], a[href|="/twicrazy"], a[href|="/twipride"], a[href|="/lunateehee"], a[href|="/lunawait"], a[href|="/a02"], a[href|="/a12"], a[href|="/a22"], a[href|="/a04"], a[href|="/a14"], a[href|="/a05"], a[href|="/a15"], a[href|="/paperbagderpy"], a[href|="/paperbagwizard"], a[href|="/derpwizard"], a[href|="/a03"], a[href|="/ajhappy"], a[href|="/happlejack"], a[href|="/a13"], a[href|="/ppfear"], a[href|="/pinkiefear"], a[href|="/a23"], a[href|="/twibeam"], a[href|="/raritydaww"], a[href|="/scootacheer"], a[href|="/lootascoo"], a[href|="/ajsup"], a[href|="/ajwhatsgood"], a[href|="/flutterwhoa"], a[href|="/flutterwoah"], a[href|="/a25"], a[href|="/rdcry"], a[href|="/a06"], a[href|="/ohcomeon"], a[href|="/sbcomeon"], a[href|="/ppcute"], a[href|="/cutiepie"], a[href|="/a16"], a[href|="/a26"], a[href|="/abbored"], a[href|="/abmerp"], a[href|="/a07"], a[href|="/raritypaper"], a[href|="/raritynews"], a[href|="/a17"],a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/a27"],a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/a08"],a[href|="/twiright"],a[href|="/satistwied"],a[href|="/a18"],a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/a28"],a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/a09"],a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a19"],a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[href|="/a29"],a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadence"],a[href|="/princesscadance"],a[href|="/princessmiamorecadenza"], a[href|="/a30"], a[href|="/flutterroll"],a[href|="/a31"],a[href|="/spikemeh"],a[href|="/a32"],a[href|="/abmeh"],a[href|="/a33"],a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/a34"],a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/a35"],a[href|="/silverspoon"],a[href|="/sspout"] {
     display: block;
     clear: none;
     float: left;
@@ -350,7 +349,7 @@ a[href|="/a00"], a[href|="/ajlie"], a[href|="/a01"], a[href|="/a10"], a[href|="/
     height: 70px;
     background-image: url(%%amotes%%) !important
     }
-a[href|="/ra00"], a[href|="/rajlie"], a[href|="/ra01"], a[href|="/ra10"], a[href|="/ra11"], a[href|="/ra21"], a[href|="/rpriceless"], a[href|="/ra20"], a[href|="/rflutterjerk"], a[href|="/rcelestiamad"], a[href|="/rtwicrazy"], a[href|="/rtwipride"], a[href|="/rlunateehee"], a[href|="/rlunawait"], a[href|="/ra02"], a[href|="/ra12"], a[href|="/ra22"], a[href|="/ra04"], a[href|="/ra14"], a[href|="/ra05"], a[href|="/ra15"], a[href|="/rpaperbagderpy"], a[href|="/rpaperbagwizard"], a[href|="/rderpwizard"], a[href|="/ra03"], a[href|="/rajhappy"], a[href|="/rhapplejack"], a[href|="/ra13"], a[href|="/rppfear"], a[href|="/rpinkiefear"], a[href|="/ra23"], a[href|="/rtwibeam"], a[href|="/rraritydaww"], a[href|="/rscootacheer"], a[href|="/rlootascoo"], a[href|="/rajsup"], a[href|="/rajwhatsgood"], a[href|="/rflutterwhoa"], a[href|="/rflutterwoah"], a[href|="/ra25"], a[href|="/rrdcry"], a[href|="/ra06"], a[href|="/rohcomeon"], a[href|="/rsbcomeon"], a[href|="/rppcute"], a[href|="/rcutiepie"], a[href|="/ra16"], a[href|="/ra26"], a[href|="/rabbored"], a[href|="/rabmerp"], a[href|="/ra07"], a[href|="/rraritypaper"], a[href|="/rraritynews"],a[href|="/ra17"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra27"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/ra08"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra18"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/ra28"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/ra09"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra19"],a[href|="/rchrysalis"],a[href|="/rqueenchrysalis"],a[href|="/rchangelingqueen"],a[href|="/ra29"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadence"],a[href|="/rprincesscadance"],a[href|="/rprincessmiamorecadenza"], a[href|="/ra30"], a[href|="/rflutterroll"] {
+a[href|="/ra00"], a[href|="/rajlie"], a[href|="/ra01"], a[href|="/ra10"], a[href|="/ra11"], a[href|="/ra21"], a[href|="/rpriceless"], a[href|="/ra20"], a[href|="/rflutterjerk"], a[href|="/rcelestiamad"], a[href|="/rtwicrazy"], a[href|="/rtwipride"], a[href|="/rlunateehee"], a[href|="/rlunawait"], a[href|="/ra02"], a[href|="/ra12"], a[href|="/ra22"], a[href|="/ra04"], a[href|="/ra14"], a[href|="/ra05"], a[href|="/ra15"], a[href|="/rpaperbagderpy"], a[href|="/rpaperbagwizard"], a[href|="/rderpwizard"], a[href|="/ra03"], a[href|="/rajhappy"], a[href|="/rhapplejack"], a[href|="/ra13"], a[href|="/rppfear"], a[href|="/rpinkiefear"], a[href|="/ra23"], a[href|="/rtwibeam"], a[href|="/rraritydaww"], a[href|="/rscootacheer"], a[href|="/rlootascoo"], a[href|="/rajsup"], a[href|="/rajwhatsgood"], a[href|="/rflutterwhoa"], a[href|="/rflutterwoah"], a[href|="/ra25"], a[href|="/rrdcry"], a[href|="/ra06"], a[href|="/rohcomeon"], a[href|="/rsbcomeon"], a[href|="/rppcute"], a[href|="/rcutiepie"], a[href|="/ra16"], a[href|="/ra26"], a[href|="/rabbored"], a[href|="/rabmerp"], a[href|="/ra07"], a[href|="/rraritypaper"], a[href|="/rraritynews"],a[href|="/ra17"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra27"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/ra08"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra18"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/ra28"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/ra09"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra19"],a[href|="/rchrysalis"],a[href|="/rqueenchrysalis"],a[href|="/rchangelingqueen"],a[href|="/ra29"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadence"],a[href|="/rprincesscadance"],a[href|="/rprincessmiamorecadenza"], a[href|="/ra30"], a[href|="/rflutterroll"],a[href|="/ra31"],a[href|="/rspikemeh"],a[href|="/ra32"],a[href|="/rabmeh"],a[href|="/ra33"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra34"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra35"],a[href|="/rsilverspoon"],a[href|="/rsspout"] {
     display: block;
     clear: none;
     float: left;
@@ -392,35 +391,36 @@ a[href|="/twipride"],
 a[href|="/rtwipride"] {
     background-position: -0px -70px
     }
-
 a[href|="/a11"],
 a[href|="/ra11"],
 a[href|="/celestiamad"],
 a[href|="/rcelestiamad"] {
     background-position: -70px -70px
     }
-
 a[href|="/a21"],
 a[href|="/ra21"],
 a[href|="/twicrazy"],
 a[href|="/rtwicrazy"] {
     background-position: -140px -70px
     }
-
+a[href|="/a31"],
+a[href|="/ra31"],
+a[href|="/spikemeh"],
+a[href|="/rspikemeh"]{ 
+   background-position: -210px -70px
+   }
 a[href|="/a02"],
 a[href|="/lunateehee"],
 a[href|="/ra02"],
 a[href|="/rlunateehee"] {
     background-position: -0px -140px
 }
-
 a[href|="/a12"],
 a[href|="/lunawait"],
 a[href|="/ra12"],
 a[href|="/rlunawait"] {
     background-position: -70px -140px
     }
-
 a[href|="/a22"],
 a[href|="/paperbagderpy"],
 a[href|="/paperbagwizard"],
@@ -431,7 +431,12 @@ a[href|="/rpaperbagwizard"],
 a[href|="/rderpwizard"]{
     background-position: -140px -140px
     }
-
+a[href|="/a32"],
+a[href|="/ra32"],
+a[href|="/abmeh"],
+a[href|="/rabmeh"]{ 
+   background-position: -210px -140px
+   }
 a[href|="/a03"],
 a[href|="/ajhappy"],
 a[href|="/happlejack"],
@@ -440,7 +445,6 @@ a[href|="/rajhappy"],
 a[href|="/rhapplejack"]{
     background-position: -0px -210px
     }
-
 a[href|="/a13"],
 a[href|="/ra13"],
 a[href|="/ppfear"],
@@ -455,6 +459,16 @@ a[href|="/twibeam"],
 a[href|="/rtwibeam"]{
     background-position: -140px -210px
     }
+a[href|="/a33"],
+a[href|="/ra33"],
+a[href|="/scootaderp"],
+a[href|="/rscootaderp"],
+a[href|="/didneyworl"],
+a[href|="/rdidneyworl"],
+a[href|="/DIDNEYWORL"],
+a[href|="/rDIDNEYWORL"]{ 
+   background-position: -210px -210px
+   }
 a[href|="/a04"],
 a[href|="/ra04"],
 a[href|="/raritydaww"],
@@ -468,6 +482,16 @@ a[href|="/rscootacheer"],
 a[href|="/lootascoo"],
 a[href|="/rlootascoo"]{
    background-position: -70px -280px
+   }
+a[href|="/a34"],
+a[href|="/ra34"],
+a[href|="/pinkieawe"],
+a[href|="/rpinkieawe"],
+a[href|="/ppawe"],
+a[href|="/rppawe"],
+a[href|="/areyouawizard"],
+a[href|="/rareyouawizard"]{ 
+   background-position: -210px -280px
    }
 a[href|="/a05"],
 a[href|="/ra05"],
@@ -485,14 +509,20 @@ a[href|="/flutterwoah"],
 a[href|="/rflutterwoah"]{
    background-position: -70px -350px;
    }
-
 a[href|="/a25"],
 a[href|="/ra25"],
 a[href|="/rdcry"],
 a[href|="/rrdcry"]{
     background-position: -140px -350px;
     }
-
+a[href|="/a35"],
+a[href|="/ra35"],
+a[href|="/silverspoon"],
+a[href|="/rsilverspoon"],
+a[href|="/sspout"],
+a[href|="/rsspout"]{ 
+   background-position: -210px -350px
+   }
 a[href|="/a06"],
 a[href|="/ra06"],  
 a[href|="/ohcomeon"], 
@@ -2500,6 +2530,23 @@ a.thumbnail.self
  top:-1px;
 }
 
+/*Comic Spoilers in the title flair*/
+.linkflair-comictitlespoiler .linkflairlabel {display:none;}
+.linkflair-comictitlespoiler p.title a.title {opacity:0;}
+.linkflair-comictitlespoiler p.title a.title:hover {opacity:100;}
+.linkflair-comictitlespoiler p.title:before
+{
+ content:"COMIC TITLE SPOILER";
+ font-size:12px;
+ color:#888;
+ border:1px solid #888;
+ border-radius:3px;
+ position:relative;
+ padding:0px 2px;
+ margin-right:2px;
+ top:-1px;
+}
+
 /*Spoilers in the title flair*/
 .linkflair-spoiler .linkflairlabel {display:none;}
 .linkflair-spoiler p.title a.title {opacity:0;}
@@ -2507,6 +2554,21 @@ a.thumbnail.self
 .linkflair-spoiler p.title:before
 {
  content:"SPOILER";
+ font-size:12px;
+ color:#888;
+ border:1px solid #888;
+ border-radius:3px;
+ position:relative;
+ padding:0px 2px;
+ margin-right:2px;
+ top:-1px;
+}
+
+/*Comic Spoilers*/
+.linkflair-comicspoiler .linkflairlabel {display:none;}
+.linkflair-comicspoiler p.title:before
+{
+ content:"COMIC SPOILER";
  font-size:12px;
  color:#888;
  border:1px solid #888;
